What's new...

Aug ?/2015 : JF ? released!
  - ant install task now requires "bits" property defined on the command line
      ex : ant install -Dbits=64
  - GLFW is now part of JavaForce to create OpenGL windows which should allow it to run on more platforms.
      See : github.com/glfw/glfw

Jul 31/2015 : JF 9.6.0 released!
  - .blend loader supports Blender 2.75
    - blender sometimes creates duplicate BHead chunks which need to be loaded in a special order
  - improved SIP Server localhost detection
  - jPBXLite/0.24 released!

Jul 14/2015 : JF 9.5.0 released!
  - Windows native launcher can now download Java if not found
  - jfRDP/0.4 released!
    - jfRDP is back
    - now uses more native code, the RDP server port is no longer redirected and the client window is pure native.
    - the view is always scaled (maybe add a toolbar later with more options)
    - added multi concurrent users and view only mode

Jul 9/2015 : JF 9.4.0 released!
  - JFNative no longer exits if the jfnative libraries are not found
  - now includes 32bit linux native libraries
  - MSI packages can now include a stripped down JRE
    - see javaforce.utils.jheat
    - new ant tasks: jremsi32 and jremsi64
    - only required files are included
    - even the rt.jar is cut down in size
    - the MSI files are only 20MBs larger with the JRE bundled
      - javapackager makes the MSI files 50+MBs larger (too big)
    - no more problems with missing JRE or wrong JRE installed (32/64bit)
    - consider jvm.dll as just another toolkit like qt.dll or gtk.dll
    - only supports Java8 for now, Java9 will require an overhaul (jimage)
  - jPhoneLite/1.9.7 released!
    - improve support for Linux
  - jfPasswords/0.14 released!
    - fixed drag and drop entries between groups
  - jfFTP/0.7 released!
    - fixed progress bar with sftp transfers
  - jfWebProxy/1.5.0 released!
    - a proxy server that uses jsp or php webservers hosted else where
    - formerly jGAEProxy (released separately)